# numbl-allocator

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
src/: numbl_allocator.c  numbl_allocator.h
tests/: test_allocator.c
ts/: allocator.ts
